Make MutableBytes extend Bytes again
Signed-off-by: Luis Pinto <luis.pinto@consensys.net>